# svm-rs

./: Cargo.toml
crates/solc/: Cargo.toml
crates/solc/src/: main.rs
crates/svm-bin/: Cargo.toml
crates/svm-builds/: Cargo.toml  build.rs
crates/svm-lib/: Cargo.toml
crates/svm-rs/: Cargo.toml
crates/svm-rs/src/: lib.rs  releases.rs
