[package]
name = "solc"
description = "svm-rs Solc wrapper binary"
readme = "../../README.md"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
svm-rs = { version = "0.2.22", path = "../svm-lib" }

anyhow = "1.0.70"
