[package]
name = "svm"
description = "Solidity-Compiler (Solc) Version Manager CLI"
readme = "../../README.md"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
svm-rs = { version = "0.2.22", path = "../svm-lib" }

anyhow = { version = "1.0.70", default-features = false, features = ["std"] }
clap = { version = "4.2.0", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
semver = { version = "1.0.17", default-features = false, features = ["std", "serde"] }
indicatif = { version = "0.17.3", default-features = false }
itertools = { version = "0.10.5", default-features = false, features = ["use_std"] }
dialoguer = { version = "0.10.3", default-features = false }
console = { version = "0.15.5", default-features = false }
