[package]
name = "svm"
description = "Solidity-Compiler (Solc) Version Manager CLI"
readme = "../../README.md"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
svm-rs = { version = "0.2.22", path = "../svm-lib" }

anyhow = "1.0.70"
clap = { version = "4.2.0", features = ["derive"] }
console = { version = "0.15.5", default-features = false }
dialoguer = { version = "0.10.3", default-features = false }
indicatif = { version = "0.17.3", default-features = false }
itertools = "0.10.5"
semver = { version = "1.0.17", features = ["serde"] }
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
