[package]
name = "svm-rs-builds"
authors = [
    "Matthias Seitz <matthias.seitz@outlook.de>",
    "Rohit Narurkar <rohit.narurkar@protonmail.com>",
]
description = "Solidity-Compiler (Solc) builds"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[build-dependencies]
svm-rs = { path = "../svm-lib", version = "0.2.22", features = ["blocking"] }

build_const = "0.2.2"
semver = { version = "1.0.17", default-features = false, features = ["std", "serde"] }
hex = "0.4.3"
serde_json = "1.0.95"

[dependencies]
build_const = "0.2.2"
hex = "0.4.3"
semver = { version = "1.0.17", default-features = false, features = ["std", "serde"] }

[features]
# helper feature to block network access
_offline = []

[package.metadata.docs.rs]
# network access is blocked during builds
features = ["_offline"]
