[package]
name = "svm-rs"
description = "Solidity-Compiler (Solc) Version Manager"
readme = "../../README.md"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
cfg-if = { version = "1.0.0", default-features = false }
fs2 = "0.4.3"
hex = { version = "0.4.3", default-features = false, features = ["std"] }
home = { version = "0.5.4", default-features = false }
once_cell = { version = "1.17.1", default-features = false }
reqwest = { version = "0.11.16", default-features = false, features = ["json"] }
semver = { version = "1.0.17", default-features = false, features = ["std", "serde"] }
serde = { version = "1.0.159", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.95", default-features = false }
sha2 = { version = "0.10.6", default-features = false }
thiserror = { version = "1.0.40", default-features = false }
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
url = { version = "2.3.1", default-features = false }

[target.'cfg(all(target_os = "windows", target_arch = "x86_64"))'.dependencies]
zip = "0.6.4"

[build-dependencies]
home = { version = "0.5.4", default-features = false }

[dev-dependencies]
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
tempfile = { version = "3.5.0", default-features = false }

[features]
default = ["rustls"]
openssl = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]
sha2-asm = ["sha2/asm"]
blocking = ["reqwest/blocking"]
