[package]
name = "svm-rs"
description = "Solidity-Compiler (Solc) Version Manager"
readme = "../../README.md"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
fs2 = "0.4.3"
hex = "0.4.3"
home = "0.5.4"
once_cell = "1.17.1"
reqwest = { version = "0.11.16", default-features = false, features = ["json"] }
semver = { version = "1.0.17", features = ["serde"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sha2 = "0.10.6"
thiserror = "1.0.40"
url = "2.3.1"

[target.'cfg(all(target_os = "windows", target_arch = "x86_64"))'.dependencies]
zip = "0.6.4"

[build-dependencies]
home = "0.5.4"

[dev-dependencies]
rand = "0.8.5"
tempfile = "3.5.0"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }

[features]
default = ["rustls"]
openssl = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]
sha2-asm = ["sha2/asm"]
blocking = ["reqwest/blocking"]
