[package]
name = "svm-rs"
version = "0.2.22"
edition = "2021"
rust-version = "1.65"
authors = ["Rohit Narurkar <rohit.narurkar@protonmail.com>"]
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/roynalnaruto/svm-rs"
homepage = "https://github.com/roynalnaruto/svm-rs"
description = "Solidity compiler Version Manager"

[[bin]]
name = "svm"
path = "src/bin/svm-bin/main.rs"
required-features = ["cli"]

[[bin]]
name = "solc"
path = "src/bin/solc/main.rs"
required-features = ["solc"]

[dependencies]
fs2 = "0.4.3"
hex = "0.4.3"
home = "0.5.4"
once_cell = "1.17.1"
reqwest = { version = "0.11.16", default-features = false, features = ["json"] }
semver = { version = "1.0.17", features = ["serde"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sha2 = "0.10.6"
thiserror = "1.0.40"
url = "2.3.1"

# CLI
anyhow = { version = "1.0.70", optional = true }
clap = { version = "4.2.0", features = ["derive"], optional = true }
console = { version = "0.15.5", default-features = false, optional = true }
dialoguer = { version = "0.10.3", default-features = false, optional = true }
indicatif = { version = "0.17.3", default-features = false, optional = true }
itertools = { version = "0.10.5", optional = true }
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"], optional = true }

[target.'cfg(all(target_os = "windows", target_arch = "x86_64"))'.dependencies]
zip = "0.6.4"

[build-dependencies]
home = "0.5.4"

[dev-dependencies]
rand = "0.8.5"
tempfile = "3.5.0"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }

[features]
default = ["rustls", "cli", "solc"]

# lib
openssl = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]
sha2-asm = ["sha2/asm"]
blocking = ["reqwest/blocking"]

# bin
cli = ["anyhow", "clap", "console", "dialoguer", "indicatif", "itertools", "tokio"]
solc = ["anyhow"]
